# ai-document-analyzer

./: .gitignore  README.md  document-analyzer-spec.md  pyproject.toml
docs/: api-http.md  docflow_profile_spec_v1.md  missing.md  overview.md  sdk-python.md  spec-details.md  spec-outline.md
python-sdk/: README.md  pyproject.toml
python-sdk/document_analyzer/: __init__.py  client.py
service/: Dockerfile  README.md  app.py  config.py  dependencies.py  requirements.txt
service/handlers/: __init__.py  events_pubsub.py  http_extract.py
src/docflow/: __init__.py
src/docflow/core/: __init__.py  config.py  errors.py
src/docflow/core/extraction/: __init__.py  engine.py  pipelines.py
src/docflow/core/models/: __init__.py  documents.py  profiles.py  schema_defs.py
src/docflow/core/providers/: __init__.py  base.py  gemini.py  stub.py
src/docflow/core/utils/: io.py  logging.py  vertex_schema.py
src/docflow/profile_catalog/: __init__.py
src/docflow/sdk/: __init__.py  client.py  config.py  errors.py  profiles.py
src/docflow/sdk/builtin_profiles/: __init__.py  describe.yaml  extract.yaml  extract_all.yaml
src/docflow/sdk/builtin_profiles/profiles/describe/v1/: config.yaml  prompt.txt  system_instruction.txt
src/docflow/sdk/builtin_profiles/prompts/: extract_all_es.txt  system_extract_all_es.txt
src/docflow/sdk/builtin_profiles/schemas/: describe.json  extract_all.json
src/docflow/sdk/cli/: main.py
tests/: test_engine.py  test_profile_catalog_fs.py  test_profiles.py  test_schema_defs.py
(+4 files in other folders)
