[project]
name = "document-analyzer"
version = "0.1.0"
description = "Python client SDK for Diego's document analysis service"
authors = [{ name = "Diego Pereyra" }]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
